--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-
+		<header>
+					
+		</header>
+		<footer><h2>Benedikt B. Ellertsson & Kristján Ingi - 2016</h2></footer>
 	</body>
 </html>
