--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
 	</head>
 	<body>
 		<header>
-					
+			<h1>Forsíða</h1>
 		</header>
+		<div class="menu">Menu</div>
+		<nav>
+			<ul>
+				<li>Próf 1</li>
+				<li>Próf 2</li>
+				<li>Próf 3</li>
+				<li>Próf 4</li>
+			</ul>
+		</nav>
+		<div class="prufa">
+			<h2>Sýni próf (EKKI VIRKT)</h2>
+			<P>Hér fyrir neðan er sýni próf, útlit þess er alveg eins og öll hinn sem þú getur valið efst á vefsíðunni.</P>
+		</div>
 		<footer><h2>Benedikt B. Ellertsson & Kristján Ingi - 2016</h2></footer>
 	</body>
 </html>
