menu og media query bætt við

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 		<header>
 			<h1>Forsíða</h1>
 		</header>
-		<div class="menu">Menu</div>
+		<div class="btn-menu">Menu</div>
 		<nav>
 			<ul>
-				<li>Próf 1</li>
-				<li>Próf 2</li>
-				<li>Próf 3</li>
-				<li>Próf 4</li>
+				<li><a href="#1">Próf 1</a></li>
+				<li><a href="#1">Próf 2</a></li>
+				<li><a href="#1">Próf 3</a></li>
+				<li><a href="#1">Próf 4</a></li>
 			</ul>
 		</nav>
 		<div class="prufa">
@@ -23,5 +23,6 @@
 			<P>Hér fyrir neðan er sýni próf, útlit þess er alveg eins og öll hinn sem þú getur valið efst á vefsíðunni.</P>
 		</div>
 		<footer><h2>Benedikt B. Ellertsson & Kristján Ingi - 2016</h2></footer>
+		<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
